--- a/profiles.html
+++ b/profiles.html
@@ -8,32 +8,32 @@
         body, html {
             margin: 0;
             padding: 0;
-            background-color: #fafafa;
-            color: #262626;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: #fff;
+            color: #1c2526;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             overflow-x: hidden;
         }
 
         .container {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 30px;
         }
 
         .header {
             display: flex;
             align-items: center;
-            padding: 20px 0;
-            border-bottom: 1px solid #dbdbdb;
+            padding: 30px 0;
+            border-bottom: 1px solid #e8ecef;
         }
 
         .profile-pic {
-            width: 150px;
-            height: 150px;
+            width: 140px;
+            height: 140px;
             border-radius: 50%;
-            border: 3px solid #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-right: 40px;
+            border: 2px solid #fff;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            margin-right: 50px;
         }
 
         .profile-info {
@@ -41,115 +41,113 @@
         }
 
         .name {
-            font-size: 28px;
-            font-weight: 600;
+            font-size: 32px;
+            font-weight: 700;
             margin: 0;
+            color: #1c2526;
         }
 
         .username {
-            font-size: 18px;
-            color: #8e8e8e;
-            margin: 5px 0;
+            font-size: 16px;
+            color: #647a7e;
+            margin: 8px 0;
+            font-weight: 500;
         }
 
         .bio {
             font-size: 16px;
-            line-height: 1.5;
-            margin: 10px 0;
-            color: #262626;
+            line-height: 1.6;
+            margin: 15px 0;
+            color: #1c2526;
         }
 
         .stats {
             display: flex;
-            gap: 40px;
-            margin-top: 15px;
+            gap: 50px;
+            margin-top: 20px;
         }
 
         .stats span {
             font-size: 16px;
+            color: #1c2526;
         }
 
         .stats span strong {
-            font-weight: 600;
+            font-weight: 700;
         }
 
         .tabs {
             display: flex;
             justify-content: center;
-            gap: 60px;
-            border-bottom: 1px solid #dbdbdb;
-            margin-top: 20px;
+            gap: 80px;
+            border-bottom: 1px solid #e8ecef;
+            margin-top: 30px;
         }
 
         .tab {
-            padding: 10px 0;
-            font-size: 12px;
+            padding: 12px 0;
+            font-size: 14px;
             font-weight: 600;
             text-transform: uppercase;
-            color: #8e8e8e;
+            color: #647a7e;
             cursor: pointer;
-            transition: color 0.2s;
+            transition: color 0.3s;
         }
 
         .tab.active {
-            color: #262626;
-            border-bottom: 2px solid #262626;
+            color: #1c2526;
+            border-bottom: 2px solid #00adef; /* Vimeo blue */
         }
 
         .content {
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 20px;
         }
 
         .item {
             position: relative;
             overflow: hidden;
-            border-radius: 8px;
+            border-radius: 6px;
             background-color: #fff;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
             cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: box-shadow 0.3s;
         }
 
         .item:hover {
-            transform: scale(1.02);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
 
-        .item img, .item video {
+        .item canvas {
             width: 100%;
-            height: 300px;
+            height: 180px;
             object-fit: cover;
             display: block;
+            background-color: #000;
         }
 
-        .item-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.3);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            transition: opacity 0.2s;
+        .item-details {
+            padding: 15px;
         }
 
-        .item:hover .item-overlay {
-            opacity: 1;
-        }
-
-        .item-overlay span {
-            color: white;
+        .item-title {
             font-size: 16px;
             font-weight: 600;
+            color: #1c2526;
+            margin: 0 0 5px 0;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .item-meta {
+            font-size: 12px;
+            color: #647a7e;
         }
     </style>
 </head>
@@ -206,7 +204,7 @@
                     name: "Unknown User", 
                     profile: "https://i.postimg.cc/3Rh3SjRb/image.jpg", 
                     bio: "No bio available.", 
-                    posts: [], // Array of image URLs
+                    posts: [], 
                     verified: false 
                 };
 
@@ -227,39 +225,68 @@
                         const img = document.createElement('img');
                         img.src = post;
                         item.appendChild(img);
-                        const overlay = document.createElement('div');
-                        overlay.className = 'item-overlay';
-                        overlay.innerHTML = '<span>Image</span>';
-                        item.appendChild(overlay);
+                        const details = document.createElement('div');
+                        details.className = 'item-details';
+                        const title = document.createElement('div');
+                        title.className = 'item-title';
+                        title.textContent = "Post";
+                        const meta = document.createElement('div');
+                        meta.className = 'item-meta';
+                        meta.textContent = "Image";
+                        details.appendChild(title);
+                        details.appendChild(meta);
+                        item.appendChild(details);
                         postsGrid.appendChild(item);
                     });
                 } else {
-                    postsGrid.innerHTML = '<p style="text-align: center; color: #8e8e8e;">No posts available.</p>';
+                    postsGrid.innerHTML = '<p style="text-align: center; color: #647a7e;">No posts available.</p>';
                 }
 
-                // Load Reels (Videos)
+                // Load Reels (Videos with Frame)
                 if (userReels.length > 0) {
                     userReels.forEach(reel => {
                         const item = document.createElement('div');
                         item.className = 'item';
-                        const thumbnail = document.createElement('img');
-                        thumbnail.src = reel.thumbnail || reel.media; // Fallback to media if no thumbnail
-                        item.appendChild(thumbnail);
-                        const overlay = document.createElement('div');
-                        overlay.className = 'item-overlay';
-                        overlay.innerHTML = '<span>Reel</span>';
-                        item.appendChild(overlay);
+                        const canvas = document.createElement('canvas');
+                        canvas.width = 280; // Match grid width
+                        canvas.height = 180;
+                        item.appendChild(canvas);
+
+                        const video = document.createElement('video');
+                        video.src = reel.media;
+                        video.muted = true;
+                        video.preload = 'metadata';
+                        video.addEventListener('loadeddata', () => {
+                            video.currentTime = 2; // Use frame at 2 seconds
+                        });
+                        video.addEventListener('seeked', () => {
+                            const context = canvas.getContext('2d');
+                            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+                        });
+
+                        const details = document.createElement('div');
+                        details.className = 'item-details';
+                        const title = document.createElement('div');
+                        title.className = 'item-title';
+                        title.textContent = reel.title || "Untitled Reel";
+                        const meta = document.createElement('div');
+                        meta.className = 'item-meta';
+                        meta.textContent = "Video";
+                        details.appendChild(title);
+                        details.appendChild(meta);
+                        item.appendChild(details);
+
                         item.addEventListener('click', () => {
                             window.open(`player.html?reelId=${reel.reelId}`, '_blank');
                         });
                         reelsGrid.appendChild(item);
                     });
                 } else {
-                    reelsGrid.innerHTML = '<p style="text-align: center; color: #8e8e8e;">No reels available.</p>';
+                    reelsGrid.innerHTML = '<p style="text-align: center; color: #647a7e;">No reels available.</p>';
                 }
             } catch (error) {
                 console.error('Error loading profile data:', error);
-                postsGrid.innerHTML = '<p style="text-align: center; color: #8e8e8e;">Failed to load profile.</p>';
+                postsGrid.innerHTML = '<p style="text-align: center; color: #647a7e;">Failed to load profile.</p>';
             }
         }
 
