--- a/profiles.html
+++ b/profiles.html
@@ -8,69 +8,65 @@
         body, html {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #1e1e1e, #2c3e50); /* Premium gradient */
-            color: #fff;
-            font-family: "Poppins", sans-serif;
+            background: #f5f5f5; /* Light, clean background */
+            color: #333;
+            font-family: "Roboto", sans-serif;
             overflow-x: hidden;
         }
 
         .container {
-            max-width: 1080px;
+            max-width: 1000px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 20px;
         }
 
         .header {
-            display: flex;
-            align-items: center;
+            text-align: center;
             padding: 40px 0;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            position: relative;
-            z-index: 1;
+            background: #fff;
+            border-radius: 0 0 20px 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
         }
 
         .profile-pic {
-            width: 140px;
-            height: 140px;
+            width: 150px;
+            height: 150px;
             border-radius: 50%;
-            border: 4px solid #fff;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            margin-right: 40px;
+            border: 5px solid #fff;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s;
+            margin-bottom: 20px;
         }
 
         .profile-pic:hover {
             transform: scale(1.05);
         }
 
-        .profile-info {
-            flex: 1;
-        }
-
         .name {
-            font-size: 32px;
+            font-size: 28px;
             font-weight: 700;
             margin: 0;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            color: #222;
         }
 
         .username {
-            font-size: 18px;
-            color: #bdc3c7;
+            font-size: 16px;
+            color: #777;
             margin: 5px 0;
             font-weight: 500;
         }
 
         .bio {
-            font-size: 16px;
+            font-size: 15px;
             line-height: 1.5;
-            margin: 15px 0;
-            color: #ecf0f1;
+            margin: 15px auto;
+            color: #444;
             max-width: 600px;
         }
 
         .stats {
             display: flex;
+            justify-content: center;
             gap: 40px;
             margin-top: 15px;
         }
@@ -78,88 +74,62 @@
         .stats span {
             font-size: 16px;
             font-weight: 600;
-            color: #fff;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 6px 12px;
-            border-radius: 20px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            color: #333;
+            padding: 8px 16px;
+            background: #fff;
+            border-radius: 25px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
         }
 
         .stats span strong {
-            color: #e74c3c; /* Bold accent */
-        }
-
-        .tabs {
-            display: flex;
-            justify-content: center;
-            gap: 80px;
-            padding: 20px 0;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .tab {
-            padding: 10px 20px;
-            font-size: 14px;
-            font-weight: 600;
-            text-transform: uppercase;
-            color: #bdc3c7;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .tab.active {
-            color: #fff;
-            background: #e74c3c;
-            border-radius: 20px;
-            box-shadow: 0 2px 6px rgba(231, 76, 60, 0.4);
+            color: #ff3366; /* Vibrant accent */
         }
 
         .content {
-            margin: 30px 0;
+            margin: 40px 0;
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 10px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
         }
 
         .item {
             position: relative;
             overflow: hidden;
-            border-radius: 12px;
-            background: #000;
+            border-radius: 15px;
+            background: #fff;
             cursor: pointer;
-            aspect-ratio: 9 / 16;
             transition: all 0.3s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
         .item:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
         }
 
         .item canvas, .item img {
             width: 100%;
-            height: 100%;
+            height: 400px; /* Fixed height for consistency */
             object-fit: cover;
             display: block;
+            background: #000;
         }
 
         .item-overlay {
             position: absolute;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+            padding: 15px;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
             display: flex;
-            align-items: flex-end;
+            align-items: center;
             justify-content: center;
             opacity: 0;
             transition: opacity 0.3s;
-            padding: 15px;
         }
 
         .item:hover .item-overlay {
@@ -171,39 +141,31 @@
             font-size: 16px;
             font-weight: 600;
             text-transform: uppercase;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
         }
 
         .error {
             text-align: center;
-            color: #e74c3c;
+            color: #ff3366;
             font-size: 18px;
             padding: 20px;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <img class="profile-pic" id="profile-pic" src="">
-            <div class="profile-info">
-                <h1 class="name" id="name">Loading...</h1>
-                <div class="username" id="username">@loading</div>
-                <div class="bio" id="bio">Loading bio...</div>
-                <div class="stats">
-                    <span><strong id="reels-count">0</strong> Reels</span>
-                    <span><strong id="posts-count">0</strong> Posts</span>
-                </div>
+            <h1 class="name" id="name">Loading...</h1>
+            <div class="username" id="username">@loading</div>
+            <div class="bio" id="bio">Loading bio...</div>
+            <div class="stats">
+                <span><strong id="content-count">0</strong> Content</span>
             </div>
         </div>
-        <div class="tabs">
-            <div class="tab active" data-tab="posts">Posts</div>
-            <div class="tab" data-tab="reels">Reels</div>
-        </div>
         <div class="content">
-            <div class="grid" id="posts-grid"></div>
-            <div class="grid" id="reels-grid" style="display: none;"></div>
+            <div class="grid" id="content-grid"></div>
         </div>
     </div>
 
@@ -215,21 +177,18 @@
         const name = document.getElementById('name');
         const username = document.getElementById('username');
         const bio = document.getElementById('bio');
-        const reelsCount = document.getElementById('reels-count');
-        const postsCount = document.getElementById('posts-count');
-        const postsGrid = document.getElementById('posts-grid');
-        const reelsGrid = document.getElementById('reels-grid');
-        const tabs = document.querySelectorAll('.tab');
+        const contentCount = document.getElementById('content-count');
+        const contentGrid = document.getElementById('content-grid');
 
         async function loadProfileData() {
             try {
                 const [profilesResponse, reelsResponse] = await Promise.all([
                     fetch('profiles.json', { cache: 'no-store' }).then(res => {
-                        if (!res.ok) throw new Error('Profiles not found');
+                        if (!res.ok) throw new Error('Profiles JSON not found');
                         return res.json();
                     }).catch(() => ({ profiles: [] })),
                     fetch('reels.json', { cache: 'no-store' }).then(res => {
-                        if (!res.ok) throw new Error('Reels not found');
+                        if (!res.ok) throw new Error('Reels JSON not found');
                         return res.json();
                     }).catch(() => ({ reels: [] }))
                 ]);
@@ -238,7 +197,7 @@
                 const reels = reelsResponse.reels || [];
 
                 if (profiles.length === 0 && reels.length === 0) {
-                    throw new Error('No data available');
+                    throw new Error('No data available in JSON files');
                 }
 
                 const profile = profiles.find(p => p.id === profileId) || { 
@@ -256,89 +215,74 @@
                 bio.textContent = profile.bio || "No bio available.";
 
                 const userReels = reels.filter(reel => reel.id === profileId);
-                reelsCount.textContent = userReels.length;
-                postsCount.textContent = profile.posts ? profile.posts.length : 0;
+                const userPosts = profile.posts || [];
+                const allContent = [...userPosts.map(post => ({ type: 'post', url: post })), 
+                                  ...userReels.map(reel => ({ type: 'reel', url: reel.media, reelId: reel.reelId }))];
+                contentCount.textContent = allContent.length;
 
-                // Load Posts (Images)
-                postsGrid.innerHTML = '';
-                if (profile.posts && profile.posts.length > 0) {
-                    profile.posts.forEach(post => {
+                // Load Unified Content
+                contentGrid.innerHTML = '';
+                if (allContent.length > 0) {
+                    allContent.forEach(content => {
                         const item = document.createElement('div');
                         item.className = 'item';
-                        const img = document.createElement('img');
-                        img.src = post;
-                        img.onerror = () => img.src = 'https://via.placeholder.com/300x533?text=Post+Not+Found';
-                        item.appendChild(img);
-                        const overlay = document.createElement('div');
-                        overlay.className = 'item-overlay';
-                        overlay.innerHTML = '<span>Post</span>';
-                        item.appendChild(overlay);
-                        postsGrid.appendChild(item);
+
+                        if (content.type === 'post') {
+                            const img = document.createElement('img');
+                            img.src = content.url;
+                            img.onerror = () => img.src = 'https://via.placeholder.com/300x400?text=Post+Not+Found';
+                            item.appendChild(img);
+                            const overlay = document.createElement('div');
+                            overlay.className = 'item-overlay';
+                            overlay.innerHTML = '<span>Post</span>';
+                            item.appendChild(overlay);
+                        } else if (content.type === 'reel') {
+                            const canvas = document.createElement('canvas');
+                            canvas.width = 300;
+                            canvas.height = 400; // Fixed height for uniformity
+                            item.appendChild(canvas);
+
+                            const video = document.createElement('video');
+                            video.src = content.url;
+                            video.muted = true;
+                            video.preload = 'metadata';
+                            video.addEventListener('loadeddata', () => {
+                                video.currentTime = 1; // Frame at 1s
+                            });
+                            video.addEventListener('seeked', () => {
+                                const context = canvas.getContext('2d');
+                                context.drawImage(video, 0, 0, canvas.width, canvas.height);
+                            });
+                            video.onerror = () => {
+                                const context = canvas.getContext('2d');
+                                context.fillStyle = '#000';
+                                context.fillRect(0, 0, canvas.width, canvas.height);
+                                context.fillStyle = '#fff';
+                                context.font = '20px Roboto';
+                                context.textAlign = 'center';
+                                context.fillText('Reel Not Found', canvas.width / 2, canvas.height / 2);
+                            };
+
+                            const overlay = document.createElement('div');
+                            overlay.className = 'item-overlay';
+                            overlay.innerHTML = '<span>Reel</span>';
+                            item.appendChild(overlay);
+
+                            item.addEventListener('click', () => {
+                                window.open(`player.html?reelId=${content.reelId}`, '_blank');
+                            });
+                        }
+
+                        contentGrid.appendChild(item);
                     });
                 } else {
-                    postsGrid.innerHTML = '<p class="error">No posts available.</p>';
-                }
-
-                // Load Reels (Video Frames)
-                reelsGrid.innerHTML = '';
-                if (userReels.length > 0) {
-                    userReels.forEach(reel => {
-                        const item = document.createElement('div');
-                        item.className = 'item';
-                        const canvas = document.createElement('canvas');
-                        canvas.width = 300;
-                        canvas.height = 533; // 9:16
-                        item.appendChild(canvas);
-
-                        const video = document.createElement('video');
-                        video.src = reel.media;
-                        video.muted = true;
-                        video.preload = 'metadata';
-                        video.addEventListener('loadeddata', () => {
-                            video.currentTime = 1; // Frame at 1s
-                        });
-                        video.addEventListener('seeked', () => {
-                            const context = canvas.getContext('2d');
-                            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-                        });
-                        video.onerror = () => {
-                            const context = canvas.getContext('2d');
-                            context.fillStyle = '#000';
-                            context.fillRect(0, 0, canvas.width, canvas.height);
-                            context.fillStyle = '#fff';
-                            context.font = '20px Poppins';
-                            context.textAlign = 'center';
-                            context.fillText('Video Not Found', canvas.width / 2, canvas.height / 2);
-                        };
-
-                        const overlay = document.createElement('div');
-                        overlay.className = 'item-overlay';
-                        overlay.innerHTML = '<span>Reel</span>';
-                        item.appendChild(overlay);
-
-                        item.addEventListener('click', () => {
-                            window.open(`player.html?reelId=${reel.reelId}`, '_blank');
-                        });
-                        reelsGrid.appendChild(item);
-                    });
-                } else {
-                    reelsGrid.innerHTML = '<p class="error">No reels available.</p>';
+                    contentGrid.innerHTML = '<p class="error">No content available.</p>';
                 }
             } catch (error) {
                 console.error('Error loading profile data:', error);
-                postsGrid.innerHTML = '<p class="error">Failed to load profile data. Check JSON files.</p>';
-                reelsGrid.innerHTML = '';
+                contentGrid.innerHTML = '<p class="error">Failed to load content. Check JSON files or network.</p>';
             }
         }
-
-        tabs.forEach(tab => {
-            tab.addEventListener('click', () => {
-                tabs.forEach(t => t.classList.remove('active'));
-                tab.classList.add('active');
-                postsGrid.style.display = tab.dataset.tab === 'posts' ? 'grid' : 'none';
-                reelsGrid.style.display = tab.dataset.tab === 'reels' ? 'grid' : 'none';
-            });
-        });
 
         loadProfileData();
     </script>
